--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "dev": "ts-node src/main.ts"
+    "dev": "ts-node src/main.ts",
+    "build": "esbuild src/main.ts src/podcastDownloader.ts src/advertStripper.ts src/exporter.ts --bundle --platform=node --target=node22 --outdir=dist"
   },
   "repository": {
     "type": "git",
@@ -20,10 +21,12 @@
   "devDependencies": {
     "@types/fluent-ffmpeg": "^2.1.27",
     "@types/node": "^22.15.20",
+    "esbuild": "^0.25.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.817.0",
     "dotenv": "^16.5.0",
     "fluent-ffmpeg": "^2.1.3",
     "openai": "^4.103.0",
