--- a/package.json
+++ b/package.json
@@ -1,36 +1,21 @@
 {
-  "name": "podcast-adblocker",
-  "version": "0.1.0",
-  "description": "",
-  "main": "main.js",
-  "scripts": {
-    "dev": "ts-node src/main.ts",
-    "build": "esbuild src/main.ts src/podcastDownloader.ts src/advertStripper.ts src/exporter.ts --bundle --platform=node --target=node22 --outdir=dist"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/maxharrison/podcast-adblocker.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/maxharrison/podcast-adblocker/issues"
-  },
-  "homepage": "https://github.com/maxharrison/podcast-adblocker#readme",
-  "devDependencies": {
-    "@types/fluent-ffmpeg": "^2.1.27",
-    "@types/node": "^22.15.20",
-    "esbuild": "^0.25.4",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
-  },
-  "dependencies": {
-    "@aws-sdk/client-s3": "^3.817.0",
-    "dotenv": "^16.5.0",
-    "fluent-ffmpeg": "^2.1.3",
-    "openai": "^4.103.0",
-    "rss-parser": "^3.13.0",
-    "zod": "^3.25.26"
-  }
+	"name": "podcast-adblocker",
+	"version": "0.0.0",
+	"private": true,
+	"scripts": {
+		"deploy": "wrangler deploy",
+		"dev": "wrangler dev --test-scheduled",
+		"start": "wrangler dev --test-scheduled",
+		"cf-typegen": "wrangler types"
+	},
+	"devDependencies": {
+		"typescript": "^5.5.2",
+		"wrangler": "^4.16.1"
+	},
+	"dependencies": {
+		"@types/node": "^22.15.21",
+		"openai": "^4.103.0",
+		"rss-parser": "^3.13.0",
+		"zod": "^3.25.28"
+	}
 }
